# nub

./: .gitignore  LICENSE  README.md  pyproject.toml
skills/: jsonl.md  skill.md
src/nub/: __init__.py  __main__.py  cli.py  config.py  core.py  dom.py  profiler.py
src/nub/formats/: __init__.py  base.py  conversation.py  csv.py  folder.py  json.py  markdown.py  mindmap.py  python.py  text.py  treesitter.py
tests/fixtures/: config_sample.ini  log_sample.txt  numbered_list.txt  prose_sample.txt  readme_sample.md  sample.txt  unicode.txt
tests/integration/: test_budget_flow.py  test_cli.py
tests/uat/: __init__.py  test_budget_enforcement.py  test_cli_usability.py  test_format_detection.py  test_importance_scoring.py  test_structure_preservation.py
tests/unit/components/: test_core.py
tests/unit/contracts/: test_dom.py
tests/unit/formats/: test_conversation.py  test_csv.py  test_folder.py  test_go.py  test_java.py  test_java_garbage.py  test_java_lod.py  test_javascript.py  test_json.py  test_markdown.py  test_php.py  test_python.py  test_python_garbage.py  test_python_lod.py  test_text.py  test_treesitter.py
